# wallclock-arduino

./: .gitignore  .travis.yml  ArduinoLibraries.json  ArliFile.yml  CMakeLists.txt  README.md  arli.json
cmake/: ArduinoToolchain.cmake  Arli.cmake  CMakeLists.txt  functions.cmake
cmake/Platform/: Arduino.cmake
src/: CMakeLists.txt  WallClock.cpp  WallClock3.cpp
src/application/: App.cpp  App.h  CMakeLists.txt  Configuration.h  GaugedValue.h  NeoPixelEffects.cpp  NeoPixelEffects.h  NeoPixelManager.cpp  NeoPixelManager.h  RotaryEncoderWithButton.h  SetTimeHelper.cpp  SetTimeHelper.h  SetTimeMenu.cpp  SetTimeMenu.h  State.h  Wallock.h
